clusters/cl01tl/manifests/trek/HTTPRoute-trek.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trek
  labels:
    app.kubernetes.io/instance: trek
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: trek
    helm.sh/chart: trek-5.1.0
  namespace: trek
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "trek.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: trek
          namespace: trek
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
